--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "type": "git",
     "url": "git://github.com/oakmac/chessboardjs.git"
   },
-  "files": ["dist/"],
+  "files": [
+    "dist/"
+  ],
   "dependencies": {
-    "jquery": ">=3.4.1"
+    "jquery": "^3.6.0"
   },
   "devDependencies": {
     "csso": "3.5.1",
